FIX infoModal for films, hide filter on films page, loading z-index - 3

--- a/src/components/infoTable/infoTable.css
+++ b/src/components/infoTable/infoTable.css
@@ -1,7 +1,12 @@
+.header-controls-wrp{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 0 5vw;
+}
 .back-to-main{
     color:#999;
     font-size: 1em;
-    padding-left: 5vw;
 }
 .info-table{
     margin: 0 auto;
