--- a/src/components/loading/loading.css
+++ b/src/components/loading/loading.css
@@ -9,4 +9,5 @@
     top:50%;
     left:50%;
     animation: loading 1s infinite;
+    z-index: 3;
 }
